# LLM_notebooks

./: .gitignore  README.md  pyproject.toml
langchain/: model_parser.ipynb
langgraph/: first_steps.ipynb  swarm.ipynb
openAI/: fine_tuning.ipynb  fine_tuning_llm.ipynb  first_steps_llm.ipynb
