[project]
name = "python-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Andres Plaza (@bue221)",email = "camiloplaza3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.74.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "langgraph-swarm (>=0.0.11,<0.0.12)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
